discord-frontend/hartex-discord-commands-test/tests/ui/expected_literal1.stderr
error: unexpected end of input, expected literal
  --> tests/ui/expected_literal1.rs:25:1
   |
25 | #[metadata(command_type =)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `metadata` (in Nightly builds, run with -Z macro-backtrace for more info)
